--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,14 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
+        env:
+          REACT_APP_API_KEY: ${{ vars.API_KEY }}
+          REACT_APP_AUTH_DOMAIN: ${{ vars.AUTH_DOMAIN }}
+          REACT_APP_DATABASE_URL: ${{ vars.DATABASE_URL }}
+          REACT_APP_PROJECT_ID: ${{ vars.PROJECT_ID }}
+          REACT_APP_STORAGE_BUCKET: ${{ vars.STORAGE_BUCKET }}
+          REACT_APP_MESSAGING_SENDER_ID: ${{ vars.MESSAGING_SENDER_ID }}
+          REACT_APP_APP_ID: ${{ vars.APP_ID }}
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
